# OrbitChain-Contracts

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FEE_ESTIMATION_GUIDE.md  FEE_ESTIMATION_QUICK_REFERENCE.md  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  package-lock.json  package.json  playwright.config.js  wallet_connect.html  wallet_connect.js
.github/: labeler.yml  (+1 more)
campaign/: Cargo.toml  build.rs
campaign/src/: admin.rs  asset_auth.rs  backend.rs  contract.rs  event.rs  lib.rs  multi_asset_release.rs  receipt.rs  release_milestone.rs  reports.rs  storage.rs  types.rs  validation.rs
campaign/src/test/: admin_action_tests.rs  asset_donor_index_tests.rs  bump_storage_tests.rs  claim_refund_tests.rs  error_discriminant_tests.rs  event_snapshot_tests.rs  events_test.rs  get_campaign_status_tests.rs  invariant_tests.rs  mod.rs  negative_path_tests.rs  receipt_tests.rs  release_milestone_tests.rs  report_cache_tests.rs  wrapped_native_xlm_tests.rs
campaign/src/test/snapshots/: orbitchain_campaign__test__event_snapshot_tests__cancel_refund_events.snap  orbitchain_campaign__test__event_snapshot_tests__donation_lifecycle_events.snap  orbitchain_campaign__test__event_snapshot_tests__freeze_events.snap
campaign/test_snapshots/asset_auth/tests/: direct_storage_write_does_not_bypass_early_guard.1.json  empty_accepted_assets_panics.1.json  view_native_xlm_returns_true_when_accepted.1.json  view_returns_false_for_unaccepted.1.json  view_returns_true_for_accepted.1.json
campaign/test_snapshots/get_all_milestones/tests/: returns_all_milestones_for_multiple.1.json  returns_all_milestones_for_single.1.json
campaign/test_snapshots/get_milestone/tests/: enriched_carries_pending_release_and_is_next_pending.1.json  enriched_is_fully_released_when_milestone_is_released.1.json  enriched_locked_milestone_is_not_marked_next_pending.1.json
campaign/test_snapshots/test/bump_storage_tests/: bump_storage_extends_core_and_milestone_ttls.1.json  bump_storage_is_idempotent_at_full_ttl.1.json  bump_storage_panics_when_uninitialized.1.json  bump_storage_still_bumps_legacy_per_index_entries.1.json  bump_storage_tolerates_unwritten_milestone_slots.1.json
campaign/test_snapshots/test/claim_refund_tests/: test_claim_refund_ended_donor_1.1.json  test_claim_refund_ended_donor_100.1.json  test_claim_refund_ended_full_refund.1.json  test_claim_refund_ended_no_milestones_eligibility.1.json  test_claim_refund_ended_with_milestone_released.1.json  test_claim_refund_ended_with_released_milestone_eligibility.1.json  test_claim_refund_refund_amount_overflow.1.json  test_claim_refund_zero_denominator.1.json
campaign/test_snapshots/test/get_campaign_status_tests/: calculates_past_subday_remaining.1.json  calculates_subday_remaining.1.json
campaign/test_snapshots/test/integration_tests/: test_campaign_analytics_report_and_summary.1.json  test_donate_below_minimum_panics_assert.1.json  test_donate_happy_path.1.json  test_extend_deadline_happy_path.1.json  test_initialize_happy_path.1.json  test_lifecycle_end_and_refund_eligibility.1.json  test_lifecycle_multi_milestone_unlock.1.json
campaign/test_snapshots/test/invariant_tests/: apply_donation_overflow_total_donated_panics.1.json  invariant_last_milestone_target_equals_goal.1.json  invariant_last_milestone_target_equals_goal.2.json  invariant_last_milestone_target_equals_goal.3.json  invariant_last_milestone_target_equals_goal.4.json  invariant_milestone_targets_strictly_ascending.1.json  invariant_no_released_milestones_while_active.1.json  invariant_overfunding_handled_correctly.1.json  invariant_raised_amount_never_exceeds_goal.1.json  invariant_random_donation_sequence_preserves_state.1.json  invariant_release_milestone_does_not_overpay_across_assets.1.json  invariant_total_donations_match_raised.1.json
campaign/test_snapshots/test/milestone_batch_tests/: already_unlocked_milestones_are_not_reported_again.1.json  benchmark_burst_unlock_improves_by_more_than_40_percent.1.json  burst_unlocks_every_reached_milestone_in_one_write.1.json  legacy_per_index_layout_reads_and_migrates.1.json  partial_unlock_stops_at_first_unreached_target.1.json
campaign/test_snapshots/test/negative_path_tests/: test_bump_storage_as_operator_fails_without_operator_role.1.json  test_bump_storage_as_operator_succeeds_for_authorized_operator.1.json  test_bump_storage_fails_not_initialized.1.json  test_bump_storage_fails_without_operator_role.1.json  test_bump_storage_succeeds_for_authorized_operator.1.json  test_cancel_campaign_fails_already_cancelled.1.json  test_cancel_campaign_not_frozen_succeeds.1.json  test_claim_refund_eligible_cancelled.1.json  test_claim_refund_fails_already_claimed.1.json  test_claim_refund_fails_campaign_active.1.json  test_claim_refund_fails_no_donor_record.1.json  test_donate_fails_below_minimum.1.json  test_donate_fails_campaign_ended.1.json  test_donate_fails_negative_amount.1.json  test_donate_fails_not_initialized.1.json  test_donate_fails_on_donation_count_overflow.1.json  test_edge_case_no_donor_record.1.json  test_edge_case_zero_donations.1.json  test_end_campaign_fails_already_ended.1.json  test_end_campaign_fails_cancelled.1.json  test_end_campaign_frozen_panics.1.json  test_end_campaign_not_frozen_succeeds.1.json  test_end_then_refund_eligible.1.json  test_extend_deadline_fails_absurd_future_time.1.json  (+16 more)
common/: Cargo.toml
common/src/: lib.rs  version.rs
crates/contracts/batch-donor/: Cargo.toml
crates/testkit/: Cargo.toml
crates/testkit/src/: lib.rs
crates/testkit/tests/: proptest_tests.proptest-regressions  proptest_tests.rs
crates/tools/: Cargo.toml
crates/tools/src/: bump_storage.rs  campaign_totals.rs  debug_utils.rs  deploy.rs  encrypted_vault.rs  error_mapper.rs  horizon_error.rs  indexer.rs  invoke.rs  key_manager.rs  keypair_manager.rs  lib.rs  main.rs  poll_config.rs  response_handler.rs  secure_vault.rs  signing_request.rs
crates/tools/tests/: integration_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: claim_refund.rs  donate.rs  initialize.rs  release_milestone.rs
token-bridge/: Cargo.toml
(+52 files in other folders)
