[workspace]
resolver = "2"
members = [
    "campaign",
    "common",
    "crates/contracts/batch-donor",
    "crates/contracts/core",
    "crates/testkit",
    "crates/tools",
    "token-bridge",
]
exclude = [
    "fuzz",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# Mirrors the LICENSE file in the repo root; both `make deny` and
# crates.io require this field to be present on every published crate.
license = "MIT"

[workspace.dependencies]
soroban-sdk = { version = "27.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dotenv = "0.15"
common = { package = "orbitchain-common", version = "0.1.0", path = "common" }
