[package]
name = "orbitchain-campaign"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OrbitChain campaign smart contract — milestones, donations, refunds, and lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-backend = []

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
# Issue #115: JSON/string snapshot assertions for emitted events.
insta = "1"
