[package]
name = "orbitchain-campaign"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OrbitChain campaign smart contract — milestones, donations, refunds, and lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-backend = []

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "27.0.2", features = ["testutils"] }