[package]
name = "orbitchain-campaign"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OrbitChain campaign smart contract — milestones, donations, refunds, and lifecycle"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-backend = []

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }

[build-dependencies]
syn = { version = "2", features = ["full", "extra-traits", "parsing"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
