[package]
name = "orbitchain-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false
description = "OrbitChain common types — shared CampaignStatus, MilestoneStatus, AssetInfo, and ErrorCode"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "26.0.1", features = ["testutils"] }
