[package]
name = "orbitchain-common"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OrbitChain common types — shared CampaignStatus, MilestoneStatus, and AssetInfo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "27.0.2", features = ["testutils"] }