[package]
name = "orbitchain-token-bridge"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "OrbitChain cross-chain token bridge contract"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
common = { workspace = true }

[dev-dependencies]
soroban-sdk = { version = "27.0.2", features = ["testutils"] }