[package]
name = "orbitchain-tools"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "OrbitChain CLI tools — key management, signing, asset issuing, and payment processing"

[[bin]]
name = "orbitchain-cli"
path = "src/main.rs"

[dependencies]
soroban-sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "time",
    "sync",
    "signal",
] }
# Issue #145: HTTP for polling Soroban RPC `getEvents` and POSTing webhook
# batches. rustls avoids a system OpenSSL build dependency.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
# Issue #145: the source/sink traits are used as `dyn` objects so the pipeline
# is testable with fakes; `async fn` in traits is not yet dyn-compatible.
async-trait = "0.1"
anyhow = { workspace = true }
dotenv = { workspace = true }
toml = "0.8"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
ed25519-dalek = "2.2"
zeroize = "1.6"
chrono = { version = "0.4", features = ["serde"] }
# Structured logging (issue #140). `json` gives the machine-readable formatter
# behind `--log-format=json`; `env-filter` lets operators tune verbosity with
# RUST_LOG without a rebuild.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
